# performance_tests

./: .gitignore  README.md  pyproject.toml  readme.rst  requirements.txt  upload.bat
arcade_perf/: __init__.py  __main__.py  graph.py  manager.py  timing.py
arcade_perf/tests/: base.py
arcade_perf/tests/arcade/: collision.py  moving_shapes.py  moving_shapes2.py  moving_sprites.py  moving_sprites_basic.py  stationary_sprites.py  straight_shapes.py
arcade_perf/tests/pygame/: collision.py  moving_shapes.py  moving_sprites.py
arcade_perf/tests/pyglet/: moving_shapes.py
doc/source/: conf.py  draw_moving_sprites.rst  how_to_recreate.rst  index.rst
doc/source/collision/: arcade_source.rst  index.rst  pygame_source.rst
doc/source/draw_moving_sprites/: arcade_source.rst  index.rst  pygame_source.rst
doc/source/draw_stationary_sprites/: index.rst  (+2 more)
src/: __main__.py  generate_graphs.py  performance_timing.py
src/arcade/: draw_moving_sprites.py
src/arcade_tests/: collision.py  draw_moving_sprites.py  draw_moving_sprites_basic.py  draw_shapes.py  draw_shapes2.py  draw_stationary_sprites.py  draw_straight_shapes.py
src/pygame_1_9/: draw_moving_sprites.py
src/pygame_1_9_tests/: collision.py  draw_moving_sprites.py  draw_rotated_shapes.py  draw_shapes.py  draw_stationary_sprites.py  draw_straight_shapes.py
src/pygame_tests/: collision.py  draw_moving_sprites.py  draw_rotated_shapes.py  draw_shapes.py  draw_stationary_sprites.py  draw_straight_shapes.py
src/pyglet/: draw_shapes.py  draw_shapes_test.py
src/pyglet_tests/: draw_rotated_shapes.py  draw_shapes.py
(+4 files in other folders)
