[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arcade_perf"
version = "0.2.0"
description = "Arcade Performance Tests"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame-ce==2.1.4",
    "arcade==3.0.0.dev18",
    "matplotlib==3.7.1",
    "sphinx==6.1.3",
    "sphinx_rtd_theme==1.2.0",
    "seaborn==0.12.2",
]
[project.scripts]
arcade-perf = "arcade_perf.__main__:main"

[tool.setuptools.packages.find]
include = ["arcade_perf", "arcade_perf.*"]
